--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,16 @@
   </form>
 </section>
 
+
+
+
+
+{{!-- This is using uploader npm but needs trial with Upload.io --}}
+  <button data-upload-complete='alert(JSON.stringify(event.files))'>
+  Upload a Single File...
+</button>
+
+
 {{#if posts.length}}
 <section>
   <h2>Your Posts</h2>
@@ -28,4 +38,7 @@
 </section>
 {{/if}}
 
+<script async src="//freeimage.host/sdk/pup.js" data-url="https://freeimage.host/upload"></script>
 <script src="/javascript/add-post.js"></script>
+<script src="https://js.upload.io/uploader/v1"></script>
+<script src="/javascript/upload.js"></script>
